--- a/client/views/ui/typography.html
+++ b/client/views/ui/typography.html
@@ -5,20 +5,20 @@
         <div class="panel-body text-center">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>h1. Bootstrap heading <small>Secondary text</small></h1>
-                    <h2>h2. Bootstrap heading <small>Secondary text</small></h2>
-                    <h3>h3. Bootstrap heading <small>Secondary text</small></h3>
-                    <h4>h4. Bootstrap heading <small>Secondary text</small></h4>
-                    <h5>h5. Bootstrap heading <small>Secondary text</small></h5>
-                    <h6>h6. Bootstrap heading <small>Secondary text</small></h6>                    
+                    <h1>h1. Simflofy heading <small>Secondary text</small></h1>
+                    <h2>h2. Simflofy heading <small>Secondary text</small></h2>
+                    <h3>h3. Simflofy heading <small>Secondary text</small></h3>
+                    <h4>h4. Simflofy heading <small>Secondary text</small></h4>
+                    <h5>h5. Simflofy heading <small>Secondary text</small></h5>
+                    <h6>h6. Simflofy heading <small>Secondary text</small></h6>                    
                 </div>
                 <div class="col-md-6">
-                    <h1 class="text-thin">h1. Bootstrap heading <small>Secondary text</small></h1>
-                    <h2 class="text-thin">h2. Bootstrap heading <small>Secondary text</small></h2>
-                    <h3 class="text-thin">h3. Bootstrap heading <small>Secondary text</small></h3>
-                    <h4 class="text-thin">h4. Bootstrap heading <small>Secondary text</small></h4>
-                    <h5 class="text-thin">h5. Bootstrap heading <small>Secondary text</small></h5>
-                    <h6 class="text-thin">h6. Bootstrap heading <small>Secondary text</small></h6>                      
+                    <h1 class="text-thin">h1. Simflofy heading <small>Secondary text</small></h1>
+                    <h2 class="text-thin">h2. Simflofy heading <small>Secondary text</small></h2>
+                    <h3 class="text-thin">h3. Simflofy heading <small>Secondary text</small></h3>
+                    <h4 class="text-thin">h4. Simflofy heading <small>Secondary text</small></h4>
+                    <h5 class="text-thin">h5. Simflofy heading <small>Secondary text</small></h5>
+                    <h6 class="text-thin">h6. Simflofy heading <small>Secondary text</small></h6>                      
                 </div>
             </div>
         </div>
