fixed html error in header.html

--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -42,7 +42,7 @@
             <a href="#/form"><i class="fa fa-pencil"></i><span data-i18n="Forms"></span></a>
             <ul>
                 <li><a href="#/forms/layouts"><i class="fa fa-angle-right"></i><span data-i18n="Form Layouts"></span></a></li>
-                <li><a href="#/forms/elements"><i class="fa fa-angle-right"></i><span data-i18n="Form Elements"></span></li>
+                <li><a href="#/forms/elements"><i class="fa fa-angle-right"></i><span data-i18n="Form Elements"></span></a></li>
                 <li><a href="#/forms/validation"><i class="fa fa-angle-right"></i><span data-i18n="Form Validation"></span></a></li>
                 <li><a href="#/forms/wizard"><i class="fa fa-angle-right"></i><span data-i18n="Form Wizard"></span></a></li>
             </ul>
