updated a lot of demo content

--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -8,8 +8,8 @@
                     <i class="fa fa-rocket"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">36 <span class="size-h4">%</span></p>
-                    <p class="text-muted"><span data-i18n="Growth"></span></p>
+                    <p class="size-h2">1 Day Ago</p>
+                    <p class="text-muted"><span data-i18n="Activity"></span></p>
                 </div>
             </div>
         </div>
@@ -19,30 +19,30 @@
                     <i class="fa fa-users"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">12 <span class="size-h4">%</span></p>
-                    <p class="text-muted"><span data-i18n="New users"></span></p>
+                    <p class="size-h2">12</p>
+                    <p class="text-muted"><span data-i18n="My Groups"></span></p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-xsm-6">
             <div class="panel mini-box">
                 <span class="btn-icon-lined btn-icon-round btn-icon-lg-alt btn-warning">
-                    <i class="fa fa-dollar"></i>
+                    <i class="fa fa-file-text-o"></i>
                 </span>
                 <div class="box-info">
                     <p class="size-h2">8,120</p>
-                    <p class="text-muted"><span data-i18n="Profit"></span></p>
+                    <p class="text-muted"><span data-i18n="My Documents"></span></p>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-xsm-6">
             <div class="panel mini-box">
                 <span class="btn-icon-lined btn-icon-round btn-icon-lg-alt btn-danger">
-                    <i class="fa fa-shopping-cart"></i>
+                    <i class="fa fa-bar-chart-o"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">1324</p>
-                    <p class="text-muted"><span data-i18n="Sales"></span></p>
+                    <p class="size-h2">28</p>
+                    <p class="text-muted"><span data-i18n="My Reports"></span></p>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                             <div easypiechart options="easypiechartsm1.options" percent="easypiechartsm1.percent" class="easypiechart easypiechart-sm">
                                 <span class="pie-percent" ng-bind="easypiechartsm1.percent"></span>
                             </div>
-                            <p class="text-center text-muted">Bounce Rate</p>
+                            <p class="text-center text-muted">Document Usage</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                             <div easypiechart options="easypiechartsm2.options" percent="easypiechartsm2.percent" class="easypiechart easypiechart-sm">
                                 <span class="pie-percent" ng-bind="easypiechartsm2.percent"></span>
                             </div>
-                            <p class="text-center text-muted">New Visists</p>
+                            <p class="text-center text-muted">Group Participation</p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             <div easypiechart options="easypiechartsm3.options" percent="easypiechartsm3.percent" class="easypiechart easypiechart-sm">
                                 <span class="pie-percent" ng-bind="easypiechartsm3.percent"></span>
                             </div>
-                            <p class="text-center text-muted">Search Traffic</p>
+                            <p class="text-center text-muted">Document Searches</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                             <div easypiechart options="easypiechartsm4.options" percent="easypiechartsm4.percent" class="easypiechart easypiechart-sm">
                                 <span class="pie-percent" ng-bind="easypiechartsm4.percent"></span>
                             </div>
-                            <p class="text-center text-muted">Modern Browsers</p>
+                            <p class="text-center text-muted">Filter Performance</p>
                         </div>
                     </div>
                 </div>
