--- a/client/views/header.html
+++ b/client/views/header.html
@@ -26,7 +26,7 @@
             <li class="dropdown hidden-xs">
                 <a href="javascript:;" class="dropdown-toggle" id="step1" data-toggle="dropdown"><i class="fa fa-cogs"></i></a>
                 <div class="dropdown-menu with-arrow panel panel-dark admin-options" ui-not-close-on-click>
-                    <div class="panel-heading"> Admin Options </div>
+                    <div class="panel-heading"> UI Options </div>
                     <ul class="list-group">
                         <li class="list-group-item">
                             <p>Fixed Controls</p>
