--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -8,9 +8,10 @@
         data-highlight-active>
         <li><a href="#/pages/signin"> <i class="lyphicon glyphicon-off"></i><span data-i18n="Welcome"></span> </a></li>
         <li>
-            <a href="#/docs"><i class="fa fa-file-text-oc"></i><span data-i18n="Docs"></span></a>
+            <a href="#/docs"><i class="fa fa-list"></i><span data-i18n="Developers"></span></a>
             <ul>
                 <li><a href="#/docs/docs"><i class="fa fa-angle-right"></i><span data-i18n="Live Docs"></span></a></li>
+                <li><a href="#/docs/api"><i class="fa fa-angle-right"></i><span data-i18n="API Reference"></span></a></li>
             </ul>
         </li>
         <li>
@@ -23,36 +24,37 @@
             </ul>
         </li>
         <li>
-            <a href="#/pages"><i class="fa fa-file-text-o"></i><span data-i18n="Pages"></span></a>
+            <a href="#/pages"><i class="fa fa-file-text-o"></i><span data-i18n="Authentication"></span></a>
             <ul>
                 <li><a href="#/pages/signin"><i class="fa fa-angle-right"></i><span data-i18n="Sign in"></span></a></li>
                 <li><a href="#/pages/signup"><i class="fa fa-angle-right"></i><span data-i18n="Sign Up"></span></a></li>
                 <li><a href="#/pages/forgot-password"><i class="fa fa-angle-right"></i><span data-i18n="Forgot Password"></span></a></li>
-                <li><a href="#/pages/blank"><i class="fa fa-angle-right"></i><span data-i18n="Blank Page"></span></a></li>
+                <li><a href="#/pages/blank"><i class="fa fa-angle-right"></i><span data-i18n="In-App Landing Page"></span></a></li>
             </ul>
         </li>
         <li>
-            <a href="#/table"><i class="fa fa-table"></i><span data-i18n="Tables"></span></a>
+            <a href="#/table"><i class="fa fa-table"></i><span data-i18n="Data Display"></span></a>
             <ul>
                <li><a href="#/tables/responsive-filters"><i class="fa fa-angle-right"></i><span data-i18n="Responsive Tables"></span></a></li>
                <li><a href="#/tables/dynamic"><i class="fa fa-angle-right"></i><span data-i18n="Dynamic Tables"></span></a></li>
             </ul>
         </li>
         <li>
-            <a href="#/form"><i class="fa fa-pencil"></i><span data-i18n="Forms"></span></a>
+            <a href="#/form"><i class="fa fa-pencil"></i><span data-i18n="Data Interaction"></span></a>
             <ul>
                 <li><a href="#/forms/layouts"><i class="fa fa-angle-right"></i><span data-i18n="Form Layouts"></span></a></li>
                 <li><a href="#/forms/elements"><i class="fa fa-angle-right"></i><span data-i18n="Form Elements"></span></a></li>
                 <li><a href="#/forms/validation"><i class="fa fa-angle-right"></i><span data-i18n="Form Validation"></span></a></li>
-                <li><a href="#/forms/wizard"><i class="fa fa-angle-right"></i><span data-i18n="Form Wizard"></span></a></li>
+                <li><a href="#/forms/wizard"><i class="fa fa-angle-right"></i><span data-i18n="Form Wizards"></span></a></li>
             </ul>
         </li>
        <li>
-            <a href="#/charts"><i class="fa fa-bar-chart-o"></i><span data-i18n="Charts"></span></a>
+            <a href="#/charts"><i class="fa fa-bar-chart-o"></i><span data-i18n="Reporting"></span></a>
             <ul>
                 <li><a href="#/charts/flot"><i class="fa fa-angle-right"></i>Flot <span data-i18n="Charts"></span></a></li>
                 <li><a href="#/charts/morris"><i class="fa fa-angle-right"></i>Morris <span data-i18n="Charts"></span></a></li>
-                <li><a href="#/charts/charts"><i class="fa fa-angle-right"></i>Other <span data-i18n="Charts"></span></a></li>
+                <li><a href="#/charts/charts"><i class="fa fa-angle-right"></i>Charts <span data-i18n="Charts"></span></a></li>
+                <li><a href="#/charts/kibana"><i class="fa fa-angle-right"></i>Kibana <span data-i18n="Charts"></span></a></li>
             </ul>
         </li>
     </ul>
