--- a/client/views/pages/500.html
+++ b/client/views/pages/500.html
@@ -2,24 +2,24 @@
     <div class="err-container text-center">
         <div class="err">
             <div class="err-inner">
-                 <h1>500</h1>
-                 <h2>Server Error</h2>
+                 <h1>999</h1>
+                 <h2>User Error</h2>
              </div>
         </div>
 
         <div class="err-mss">
-            <p>Sorry, something goes wrong with server.</p>
+            <p>You didn't really think this would be done already.</p>
         </div>
         <div class="err-body">
             <a href="#/" class="btn btn-lg btn-primary">
                 <span class="glyphicon glyphicon-home"></span>
                 <span class="space"></span>
-                Go Back to Home Page
+                Go Back to Bearded Robot
             </a>
         </div>
     </div>
 <!--     <div class="footer text-center">
-        Copyright 2014 {{main.brand}} Admin
+        Copyright 2014 {{main.brand}} 
     </div> -->
 </div>
 
