--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -8,7 +8,7 @@
                     <i class="fa fa-rocket"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">1 Day Ago</p>
+                    <p class="size-h2">Superstaro</p>
                     <p class="text-muted"><span data-i18n="Activity"></span></p>
                 </div>
             </div>
