--- a/client/views/forms/layouts.html
+++ b/client/views/forms/layouts.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success btn-w-md">Sign in</button>
+                                <button type="submit" class="btn btn-primary btn-w-md">Sign in</button>
                             </div>
                         </div>
                     </form>  
@@ -90,7 +90,7 @@
                                 <input type="checkbox"> Remember me
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-info btn-w-md">Sign in</button>
+                        <button type="submit" class="btn btn-primary btn-w-md">Sign in</button>
                     </form>   
 
                 </div>
