--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -6,7 +6,7 @@
         data-slim-scroll
         data-collapse-nav
         data-highlight-active>
-        <li><a href="#/pages/signin"> <i class="lyphicon glyphicon-off"></i><span data-i18n="Welcome"></span> </a></li>
+        <li><a href="#/dashboard"> <i class="glyphicon glyphicon-dashboard"></i><span data-i18n="Dashboard"></span> </a></li>
         <li>
             <a href="#/docs"><i class="fa fa-list"></i><span data-i18n="Developers"></span></a>
             <ul>
