--- a/client/views/docs/docs.html
+++ b/client/views/docs/docs.html
@@ -1,44 +1,10 @@
-<!DOCTYPE html>
-<!--if lt IE 7html.no-js.lt-ie9.lt-ie8.lt-ie7
--->
-<!--if IE 7html.no-js.lt-ie9.lt-ie8
--->
-<!--if IE 8html.no-js.lt-ie9
--->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-  <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <!-- if IEmeta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    -->
-    <title>Bearded Robot Live Developer Docs</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- if lt IE 9
-    script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
-    
-    -->
-    <!-- stylesheets-->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/docs.css" rel="stylesheet">
-    <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
-    <link href="assets/css/main.css" rel="stylesheet">
-  </head>
-  <body data-spy="scroll" data-target=".bs-docs-sidebar">
-    <header role="banner" class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="javascript:;" class="navbar-brand">Bearded Robot</a>
-        </div>
-        <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Document</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <div id="content" class="bs-header">
+<div class="page">
+
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> Headings</strong></div>
+        <div class="panel-body text-center">
+            <div class="row">
+            
       <div class="container">
         <h1>Developer Documentation</h1>
         <p>The bearded-robot product development instructions are provided for developers who are working with the core ui application, codename bearded-robot. It is the assumption that this documentation is intended during the design, prototype, build, and test phases of the product cycle (build, measure, learn). The decision to merge this into the core server product or promote it to a cloud version for developers to ingteract with, is not in scope of these documents. </p>
@@ -519,23 +485,5 @@
           </section>
         </div>
       </div>
-    </div>
-    <!-- Footer-->
-    <footer class="bs-footer">
-      <div class="container">
-        <p>Copyright 2014 <a href="http://simflofy.com/">Simflofy</a></p>
-      </div>
-    </footer>
-    <!-- Scripts-->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/holder.js"></script>
-    <script src="assets/js/google-code-prettify/prettify.js"></script>
-    <script src="assets/js/jquery.smooth-scroll.js"></script>
-    <script src="assets/js/application.js"></script>
-    <script>
-      $('.bs-sidenav a').smoothScroll();
-      window.prettyPrint && prettyPrint();
-    </script>
-  </body>
-</html>
+    </div></div>
+
