--- a/client/views/forms/validation.html
+++ b/client/views/forms/validation.html
@@ -164,7 +164,7 @@
                         </div>
 
                         <button type="submit"
-                                class="btn btn-success btn-w-md"
+                                class="btn btn-primary btn-w-md"
                                 data-ng-disabled="!canSubmit()"
                                 >Submit</button>
                         <button class="btn btn-default btn-w-md"
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
                             <button type="submit"
-                                    class="btn btn-success btn-w-md"
+                                    class="btn btn-primary btn-w-md"
                                     data-ng-disabled="!canSubmit()"
                                     >Submit</button>
                             <button class="btn btn-default btn-w-md"
