--- a/client/views/pages/404.html
+++ b/client/views/pages/404.html
@@ -14,7 +14,7 @@
             <a href="#/" class="btn btn-lg btn-primary">
                 <span class="glyphicon glyphicon-home"></span>
                 <span class="space"></span>
-                Go Back to Home Page
+                Go Back to Bearded Robot
             </a>
         </div>
     </div>
