fixed, updated, hopped up, smiled

--- a/app/styles/composerJS/_var.scss
+++ b/app/styles/composerJS/_var.scss
@@ -26,7 +26,7 @@ $gray:                   lighten(#000, 33.5%) !default; // #555
 $gray-light:             lighten(#000, 60%) !default;   // #999
 $gray-lighter:           lighten(#000, 93.5%) !default; // #eee
 
-$brand-primary:         #00558b !default;
+$brand-primary:         #294E13 !default;
 $brand-success:         #3CBC8D !default;
 $brand-info:            #29B7D3 !default;
 $brand-info-alt:        #666699 !default;
