--- a/app/views/pages/profile.html
+++ b/app/views/pages/profile.html
@@ -8,13 +8,13 @@
                 <div class="panel-top bg-primary">
                     <div class="text-center">
                         <h3>{{main.name}}</h3>
-                        <p>Project Manager</p> 
+                        <p>Brew Master</p> 
                     </div>
                     <div class="divider divider-lg"></div>
                     <div class="divider divider-lg"></div>
                 </div>
                 <div class="panel-img bg-primary">
-                    <img alt="" src="images/g1.jpg" class="img-circle">
+                    <img alt="" src="images/bearded-robot.jpg" class="img-circle">
                 </div>
                 <div class="list-justified-container">
                     <ul class="list-justified text-center">
