--- a/app/views/ui/widgets.html
+++ b/app/views/ui/widgets.html
@@ -22,13 +22,13 @@
                 <div class="panel-top bg-primary">
                     <div class="text-center">
                         <h3>{{main.name}}</h3>
-                        <p>Project Manager</p> 
+                        <p>Brew Master</p> 
                     </div>
                     <div class="divider divider-lg"></div>
                     <div class="divider divider-lg"></div>
                 </div>
                 <div class="panel-img bg-primary">
-                    <img alt="" src="images/g1.jpg" class="img-circle">
+                    <img alt="" src="images/bearded-robot.jpg" class="img-circle">
                 </div>
                 <div class="list-justified-container">
                     <ul class="list-justified text-center">
@@ -86,9 +86,9 @@
             <!-- profile panel -->
             <div class="panel panel-profile">
                 <div class="panel-heading text-center bg-info">
-                    <img alt="" src="images/g1.jpg" class="img-circle img80_80">
+                    <img alt="" src="images/bearded-robot.jpg" class="img-circle img80_80">
                     <h3>{{main.name}}</h3>
-                    <p>Project Manager</p>                    
+                    <p>Brew Master</p>                    
                 </div>
                 <div class="list-justified-container">
                     <ul class="list-justified text-center">
@@ -295,7 +295,7 @@
                 <div class="panel-body">
                     <div class="media">
                         <a class="pull-left" href="javascript:;">
-                            <img alt="" src="images/g1.jpg" class="img-rounded img64_64">
+                            <img alt="" src="images/bearded-robot.jpg" class="img-rounded img64_64">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Media heading</h4>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="media">
                         <a class="pull-left" href="javascript:;">
-                            <img alt="" src="images/g1.jpg" class="img-rounded img64_64">
+                            <img alt="" src="images/bearded-robot.jpg" class="img-rounded img64_64">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading">Media heading</h4>
@@ -312,7 +312,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="javascript:;">
-                                    <img alt="" src="images/g1.jpg" class="img-rounded img64_64">
+                                    <img alt="" src="images/bearded-robot.jpg" class="img-rounded img64_64">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading">Media heading</h4>
@@ -333,10 +333,10 @@
             <div class="panel panel-profile">
                 <div class="panel-heading bg-danger clearfix">
                     <a href="" class="pull-left profile">
-                        <img alt="" src="images/g1.jpg" class="img-circle img80_80">
+                        <img alt="" src="images/bearded-robot.jpg" class="img-circle img80_80">
                     </a>
                     <h3>{{main.name}}</h3>
-                    <p>Project Manager</p>
+                    <p>Brew Master</p>
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
@@ -559,18 +559,18 @@
 
             <!-- Breadcrumbs -->
             <div class="panel panel-default">
-                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> Breadcrumbs</strong></div>
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> Beercrumbs</strong></div>
                 <div class="panel-body">
                     <ol class="breadcrumb">
                         <li><a href="javascript:;">Home</a></li>
-                        <li><a href="javascript:;">Library</a></li>
-                        <li class="active">Data</li>
+                        <li><a href="javascript:;">Brewery</a></li>
+                        <li class="active">Tank</li>
                     </ol>
 
                     <ol class="breadcrumb-alt">
                         <li><a href="javascript:;">Home</a></li>
-                        <li><a href="javascript:;">Library</a></li>
-                        <li class="active"><a href="">Data</a></li>
+                        <li><a href="javascript:;">Brewery</a></li>
+                        <li class="active"><a href="">Tank</a></li>
                     </ol>
                 </div>
             </div>
