updated demo app, ready to go for pruning

--- a/app/styles/global/_var.scss
+++ b/app/styles/global/_var.scss
@@ -10,6 +10,7 @@ $bootstrap-sass-asset-helper: (twbs-font-path("") != unquote('twbs-font-path("")
 //== Colors
 //
 //== Brand Colors for HopStack originate from http://www.colourlovers.com/palette/2372338/Colorado_Hops
+// =============================== fedora:  we have more brand work to do here ===============================
 //
 //## Gray and brand colors for use across Bootstrap.
 
