--- a/app/styles/plugins.scss
+++ b/app/styles/plugins.scss
@@ -10,7 +10,7 @@
 
 // Shared variables and mixins
 @import 
-    "composerJS/var"                        // global variables
+    "global/var"                        // global variables
 ,   "bootstrap/bootstrap/mixins"        // Bootstrap mixins
 ,   "bourbon/bourbon"                   // mixins
 ;
