--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -83,7 +83,7 @@
             </ul>
         </li>
         <li>
-            <a href="#/composerJS"><i class="fa fa-tasks"></i><span data-i18n="Composer"></span></a>
+            <a href="#/composerJS"><i class="fa fa-desktop"></i><span data-i18n="Composer"></span></a>
             <ul>
                 <li><a href="#/composerJS/builder"><i class="fa fa-angle-right"></i><span data-i18n="Composer"></span></a></li>
             </ul>
