--- a/app/styles/plugins.scss
+++ b/app/styles/plugins.scss
@@ -13,6 +13,7 @@
     "global/var"                        // global variables
 ,   "bootstrap/bootstrap/mixins"        // Bootstrap mixins
 ,   "bourbon/bourbon"                   // mixins
+,   "fonts"                             // mixins
 ;
 
 @import 
