--- a/app/styles/global/_var.scss
+++ b/app/styles/global/_var.scss
@@ -101,7 +101,7 @@ $headings-color:          inherit !default;
 $icon-font-path:          "../fonts/" !default;
 $icon-font-name:          "glyphicons-halflings-regular" !default;
 $icon-font-svg-id:        "glyphicons_halflingsregular" !default;
-$fa-font-path:            "../bower_components/font-awesome/fonts" !default;
+$fa-font-path:            "../fonts" !default;
 
 
 //== Components
